k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hotel-list-ingress
  namespace: apps
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-southeast-1:564054097121:certificate/e4ecfe78-1a04-4035-aac4-090b24d89ad5
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
spec:
  rules:
    # GraphQL API
    - host: hotel-list-api.nmdigital.cloud
      http:
        paths:
          - path: /graphql
            pathType: Prefix
            backend:
              service:
                name: hotel-list-api
                port:
                  number: 80
    
    # Frontend
    - host: hotel-list.nmdigital.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hotel-list-web
                port:
                  number: 80
  
  # TLS Configuration
  tls:
    - hosts:
        - hotel-list-api.nmdigital.cloud
        - hotel-list.nmdigital.cloud
